Various whitelists for tests to pass
See tracker http://tracker.ceph.com/issues/21376 for details

Signed-off-by: Vasu Kulkarni <vasu@redhat.com>

--- a/qa/suites/smoke/basic/tasks/rados_api_tests.yaml
+++ b/qa/suites/smoke/basic/tasks/rados_api_tests.yaml
@@ -5,7 +5,11 @@ tasks:
     log-whitelist:
     - reached quota
     - but it is still running
-    - objects unfound and apparently lost
+    - overall HEALTH_
+    - (POOL_FULL)
+    - (SMALLER_PGP_NUM)
+    - (CACHE_POOL_NO_HIT_SET)
+    - (CACHE_POOL_NEAR_FULL)
     - (POOL_APP_NOT_ENABLED)
 - thrashosds:
     chance_pgnum_grow: 2
