--- a/qa/suites/smoke/basic/tasks/rados_bench.yaml
+++ b/qa/suites/smoke/basic/tasks/rados_bench.yaml
@@ -12,8 +12,16 @@ tasks:
 - ceph:
     fs: xfs
     log-whitelist:
-    - but it is still running
-    - objects unfound and apparently lost
+      - overall HEALTH_
+      - \(OSDMAP_FLAGS\)
+      - \(OSD_
+      - \(PG_
+      - \(POOL_
+      - \(CACHE_POOL_
+      - \(SMALLER_PGP_NUM\)
+      - \(OBJECT_
+      - \(REQUEST_SLOW\)
+      - \(TOO_FEW_PGS\)
 - thrashosds:
     chance_pgnum_grow: 2
     chance_pgpnum_fix: 1
