--- a/qa/suites/smoke/basic/tasks/rados_ec_snaps.yaml
+++ b/qa/suites/smoke/basic/tasks/rados_ec_snaps.yaml
@@ -4,7 +4,12 @@ tasks:
     fs: xfs
     log-whitelist:
     - but it is still running
-    - objects unfound and apparently lost
+    - overall HEALTH_
+    - \(OSDMAP_FLAGS\)
+    - \(PG_
+    - \(OSD_
+    - \(OBJECT_
+    - \(POOL_APP_NOT_ENABLED\)
 - thrashosds:
     chance_pgnum_grow: 3
     chance_pgpnum_fix: 1
