--- a/qa/suites/smoke/basic/tasks/rbd_fsx.yaml
+++ b/qa/suites/smoke/basic/tasks/rbd_fsx.yaml
@@ -1,5 +1,16 @@
 overrides:
   ceph:
+    log-whitelist:
+      - overall HEALTH_
+      - \(OSDMAP_FLAGS\)
+      - \(OSD_
+      - \(PG_
+      - \(POOL_
+      - \(CACHE_POOL_
+      - \(SMALLER_PGP_NUM\)
+      - \(OBJECT_
+      - \(REQUEST_SLOW\)
+      - \(TOO_FEW_PGS\)
     conf:
       client:
         rbd cache: true
